--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
@@ -164,7 +164,7 @@
                 ["Results"] = OverviewModel.ClassResults
             };
 
-        _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters, Globals.StatisticDialogDefaultOptions);
+        _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters, Globals.StatDialogOptions);
     }
 
     private async Task ShowUsedComponents()
@@ -179,7 +179,7 @@
                 ["Incidents"] = incidents,
             };
 
-        _ = await _dialogService.ShowAsync<UsedComponents>("UsedComponents", parameters, Globals.StatisticDialogDefaultOptions);
+        _ = await _dialogService.ShowAsync<UsedComponents>("UsedComponents", parameters, Globals.StatDialogOptions);
     }
 
     private async Task ShowRemainingContractDurations()
@@ -193,7 +193,7 @@
                 ["Contracts"] = activeContracts
             };
 
-        _ = await _dialogService.ShowAsync<ContractLengthRemaining>("Remaining durations", parameters, Globals.StatisticDialogDefaultOptions);
+        _ = await _dialogService.ShowAsync<ContractLengthRemaining>("Remaining durations", parameters, Globals.StatDialogOptions);
     }
 
     private void GoToNextRace()
