--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/NestedTabs/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/NestedTabs/DriverResults.razor
@@ -95,6 +95,6 @@
         var parameters = new DialogParameters { ["Drivers"] = StandingDrivers, ["Season"] = OverviewModel.Season };
 
         _ = await _dialogService.ShowAsync<WdcResultChart>(
-            "WDC results chart", parameters, Globals.StatisticDialogDefaultOptionsXl);
+            "WDC results chart", parameters, Globals.StatDialogOptionsLarge);
     }
 }
