--- a/SimTECH/SimTECH/Pages/Stats/Index.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Index.razor
@@ -140,6 +140,6 @@
     private async Task ShowStatistic(StatTopic topic)
     {
         var parameters = await topic.ParameterQuery.Invoke();
-        _ = await _dialog.ShowAsync(topic.StatisticType, topic.Title, parameters, Globals.StatisticDialogDefaultOptions);
+        _ = await _dialog.ShowAsync(topic.StatisticType, topic.Title, parameters, Globals.StatDialogOptions);
     }
 }
