thinking about power rankings

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
@@ -4,7 +4,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-0" id="power-rankings-overview">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-4">
-            <MudText Typo="Typo.h3">Power rankings</MudText>
+            <MudText Typo="Typo.h3">Rankings</MudText>
             <ScreenshotButton TargetId="power-rankings-overview" Colour="Color.Tertiary" />
         </MudStack>
     </MudPaper>
