Noticed an oof-moment with attacking and defending

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
@@ -95,7 +95,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] private OverviewModel OverviewModel { get; set; }
+    [CascadingParameter] protected OverviewModel OverviewModel { get; set; }
 
     [Parameter] public int TeamRoleCarModifier { get; set; }
 
